--- a/AIsettings.html
+++ b/AIsettings.html
@@ -217,6 +217,30 @@
             </label>
           </div>
 
+          <div class="setting-card">
+            <div class="setting-info">
+              <h4>تذكير العملاء من الشهر الماضي</h4>
+              <p>
+                إرسال تذكير تلقائي لكل عميل حالته قيد الانتظار أو لم يرد خلال
+                آخر 30 يومًا.
+              </p>
+            </div>
+
+            <button
+              id="remindLastMonth"
+              style="
+                background: linear-gradient(270deg, #7c3aed, #a855f7);
+                color: #fff;
+                border: none;
+                padding: 10px 20px;
+                border-radius: 8px;
+                cursor: pointer;
+              "
+            >
+              🔁 إرسال التذكيرات
+            </button>
+          </div>
+
           <button
             id="saveSettings"
             style="
@@ -371,6 +395,85 @@
                 }
               }, i * interval * 60 * 1000);
             }
+          }
+        });
+
+      // ====== REMIND LAST MONTH BOOKINGS ======
+      document
+        .getElementById("remindLastMonth")
+        .addEventListener("click", async () => {
+          const confirmSend = confirm(
+            "هل أنت متأكد أنك تريد إرسال التذكيرات للعملاء من الشهر الماضي؟"
+          );
+          if (!confirmSend) return;
+
+          const now = new Date();
+          const thirtyDaysAgo = new Date();
+          thirtyDaysAgo.setDate(now.getDate() - 30);
+
+          try {
+            // 1️⃣ Fetch bookings from last 30 days with specific statuses
+            const { data, error } = await supabase
+              .from("bookings")
+              .select("*")
+              .gte("created_at", thirtyDaysAgo.toISOString())
+              .in("status", ["Still", "SentNoReply"]);
+
+            if (error) {
+              alert("❌ خطأ في جلب الحجوزات: " + error.message);
+              return;
+            }
+
+            if (!data.length) {
+              alert("✅ لا يوجد عملاء بحاجة لتذكير خلال الشهر الماضي.");
+              return;
+            }
+
+            // 2️⃣ Loop through and send WhatsApp reminders
+            alert(`📬 سيتم إرسال ${data.length} تذكير للعملاء.`);
+            for (const booking of data) {
+              const payload = {
+                name: booking.name || "عميلنا الكريم",
+                phone: booking.phone,
+                service: booking.service || "خدمة غير محددة",
+                appointment: booking.appointment || "",
+              };
+
+              try {
+                const res = await fetch(
+                  "https://whatsapp-test-rosy.vercel.app/sendWhatsApp",
+                  {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify(payload),
+                  }
+                );
+
+                const result = await res.json();
+
+                if (result.success) {
+                  console.log(
+                    `✅ تم إرسال تذكير إلى ${booking.name} (${booking.phone})`
+                  );
+                  // 3️⃣ Update status if needed
+                  await supabase
+                    .from("bookings")
+                    .update({ status: "SentNoReply" })
+                    .eq("id", booking.id);
+                } else {
+                  console.warn(
+                    `⚠️ فشل الإرسال لـ ${booking.name}: ${result.message}`
+                  );
+                }
+              } catch (err) {
+                console.error("❌ خطأ في إرسال التذكير:", err);
+              }
+            }
+
+            alert("✅ تم الانتهاء من إرسال كل التذكيرات بنجاح!");
+          } catch (err) {
+            console.error("❌ Unexpected Error:", err);
+            alert("حدث خطأ غير متوقع أثناء الإرسال.");
           }
         });
     </script>
