--- a/offers.html
+++ b/offers.html
@@ -86,7 +86,7 @@
         color: #aaa;
       }
 
-      /* ✅ Multiple image previews */
+      /* ✅ Multi-image preview styling */
       .image-preview-container {
         display: flex;
         flex-wrap: wrap;
@@ -100,7 +100,6 @@
         border-radius: 10px;
         object-fit: cover;
         border: 2px solid #ccc;
-        display: none;
       }
 
       /* ✅ Debug info box */
@@ -188,7 +187,7 @@
             ><i class="fa-solid fa-robot"></i> إعدادات الذكاء الاصطناعي</a
           >
           <a href="offers.html" class="active"
-            ><i class="fa-solid fa-gift"></i> الحملات الاعلانية</a
+            ><i class="fa-solid fa-gift"></i> الحملات الإعلانية</a
           >
         </nav>
       </aside>
@@ -227,7 +226,7 @@
               placeholder="اكتب تفاصيل العرض هنا..."
             ></textarea>
 
-            <label>اختيار صور العرض (يمكن اختيار أكثر من صورة)</label>
+            <label>اختيار صور العرض (يمكن تحديد أكثر من صورة)</label>
             <input type="file" id="offerImage" accept="image/*" multiple />
             <div
               id="imagePreviewContainer"
@@ -258,7 +257,6 @@
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
       const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-      // Debug helper
       function addDebugLog(message, type = "info") {
         const debugContent = document.getElementById("debugContent");
         const debugInfo = document.getElementById("debugInfo");
@@ -270,7 +268,6 @@
         console.log(`[${timestamp}] ${message}`);
       }
 
-      // Login logic
       async function login() {
         const email = document.getElementById("email").value.trim();
         const password = document.getElementById("password").value.trim();
@@ -302,7 +299,7 @@
         document.getElementById("dashboardContent").style.display = "block";
       }
 
-      // Theme toggle
+      // 🌙 Theme toggle
       const themeToggle = document.getElementById("themeToggle");
       themeToggle.addEventListener("click", function () {
         document.body.classList.toggle("dark");
@@ -321,28 +318,29 @@
         icon.classList.replace("fa-moon", "fa-sun");
       }
 
-      // 🖼️ Preview multiple images
+      // 🖼️ Multiple image preview
       const offerImage = document.getElementById("offerImage");
       const imagePreviewContainer = document.getElementById(
         "imagePreviewContainer"
       );
-
       offerImage.addEventListener("change", () => {
         imagePreviewContainer.innerHTML = "";
         const files = Array.from(offerImage.files);
-
         if (files.length > 0) {
           files.forEach((file) => {
             const reader = new FileReader();
             reader.onload = (e) => {
               const img = document.createElement("img");
               img.src = e.target.result;
-              img.classList.add("image-preview");
-              img.style.display = "block";
+              img.className = "image-preview";
               imagePreviewContainer.appendChild(img);
             };
             reader.readAsDataURL(file);
-            addDebugLog(`تم اختيار صورة: ${file.name}`);
+            addDebugLog(
+              `تم اختيار صورة: ${file.name} (${(file.size / 1024).toFixed(
+                2
+              )} KB)`
+            );
           });
         }
       });
@@ -367,10 +365,9 @@
         sendBtn.disabled = true;
         sendBtn.innerHTML = 'جاري الإرسال... <span class="spinner"></span>';
 
-        let imageUrls = [];
+        const imageUrls = [];
 
         if (files.length > 0) {
-          addDebugLog(`📸 بدء رفع ${files.length} صورة...`);
           for (const file of files) {
             try {
               const uniqueName = `${Date.now()}_${file.name}`;
@@ -381,25 +378,18 @@
                   upsert: false,
                 });
 
-              if (error) {
-                addDebugLog(
-                  `❌ فشل رفع ${file.name}: ${error.message}`,
-                  "error"
-                );
-                continue;
-              }
+              if (error) throw error;
 
               const { data: urlData } = supabase.storage
                 .from("offers")
                 .getPublicUrl(uniqueName);
-
               imageUrls.push(urlData.publicUrl);
-              addDebugLog(`✅ تم رفع ${file.name}`);
-            } catch (err) {
               addDebugLog(
-                `❌ خطأ في رفع ${file.name}: ${err.message}`,
-                "error"
+                `✅ تم رفع الصورة بنجاح: ${urlData.publicUrl}`,
+                "success"
               );
+            } catch (err) {
+              addDebugLog(`خطأ في رفع ${file.name}: ${err.message}`, "error");
             }
           }
         } else {
@@ -408,7 +398,6 @@
 
         try {
           const phone = "962785050875";
-
           const payload = {
             name: "Smile Clinic",
             phone: phone,
@@ -417,7 +406,7 @@
             images: imageUrls,
           };
 
-          addDebugLog("🚀 إرسال البيانات إلى WhatsApp API...");
+          addDebugLog("إرسال الطلب إلى WhatsApp API...");
           addDebugLog(`البيانات: ${JSON.stringify(payload, null, 2)}`);
 
           const res = await fetch(
@@ -430,35 +419,33 @@
           );
 
           const data = await res.json();
-          addDebugLog(`📩 استجابة API: ${JSON.stringify(data, null, 2)}`);
+          addDebugLog(`استجابة API: ${JSON.stringify(data, null, 2)}`);
 
           if (data.success) {
             alert("✅ تم إرسال العرض بنجاح!");
             document.getElementById("offerTitle").value = "";
             document.getElementById("offerDesc").value = "";
             document.getElementById("offerDate").value = "";
-            offerImage.value = "";
+            document.getElementById("offerImage").value = "";
             imagePreviewContainer.innerHTML = "";
           } else {
-            alert("⚠️ فشل إرسال العرض: " + (data.message || "خطأ غير معروف"));
+            alert("⚠️ فشل إرسال العرض.");
           }
         } catch (err) {
-          addDebugLog(`❌ خطأ أثناء الإرسال: ${err.message}`, "error");
-          alert("❌ حدث خطأ أثناء الإرسال");
+          addDebugLog(`خطأ في الإرسال: ${err.message}`, "error");
+          alert("❌ خطأ أثناء الإرسال: " + err.message);
         } finally {
           sendBtn.disabled = false;
           sendBtn.innerHTML = "إرسال العرض الآن";
         }
       }
 
-      // 📱 Sidebar toggle
+      // 📱 Menu toggle
       const menuToggle = document.getElementById("menuToggle");
       const sidebar = document.getElementById("sidebar");
-      if (menuToggle) {
-        menuToggle.addEventListener("click", () => {
-          sidebar.classList.toggle("active");
-        });
-      }
+      menuToggle?.addEventListener("click", () =>
+        sidebar.classList.toggle("active")
+      );
     </script>
   </body>
 </html>
