--- a/offers.html
+++ b/offers.html
@@ -86,19 +86,14 @@
         color: #aaa;
       }
 
-      /* ✅ Multi-image preview styling */
-      .image-preview-container {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px;
-        margin-top: 10px;
-      }
-
+      /* ✅ Preview styling */
       .image-preview {
-        width: 120px;
-        height: 120px;
+        width: 150px;
+        height: 150px;
         border-radius: 10px;
         object-fit: cover;
+        display: none;
+        margin-top: 10px;
         border: 2px solid #ccc;
       }
 
@@ -187,7 +182,7 @@
             ><i class="fa-solid fa-robot"></i> إعدادات الذكاء الاصطناعي</a
           >
           <a href="offers.html" class="active"
-            ><i class="fa-solid fa-gift"></i> الحملات الإعلانية</a
+            ><i class="fa-solid fa-gift"></i> إرسال العروض المخصصة</a
           >
         </nav>
       </aside>
@@ -226,12 +221,9 @@
               placeholder="اكتب تفاصيل العرض هنا..."
             ></textarea>
 
-            <label>اختيار صور العرض (يمكن تحديد أكثر من صورة)</label>
-            <input type="file" id="offerImage" accept="image/*" multiple />
-            <div
-              id="imagePreviewContainer"
-              class="image-preview-container"
-            ></div>
+            <label>اختيار صورة العرض (اختياري)</label>
+            <input type="file" id="offerImage" accept="image/*" />
+            <img id="imagePreview" class="image-preview" alt="معاينة الصورة" />
 
             <label>تاريخ انتهاء العرض</label>
             <input type="date" id="offerDate" />
@@ -252,22 +244,27 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script>
+      // 🔑 Supabase configuration
       const SUPABASE_URL = "https://ylsbmxedhycjqaorjkvm.supabase.co";
       const SUPABASE_KEY =
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
       const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
+      // 🔍 Debug helper
       function addDebugLog(message, type = "info") {
         const debugContent = document.getElementById("debugContent");
         const debugInfo = document.getElementById("debugInfo");
         debugInfo.style.display = "block";
+
         const timestamp = new Date().toLocaleTimeString("ar-EG");
         const icon = type === "error" ? "❌" : type === "success" ? "✅" : "ℹ️";
+
         debugContent.innerHTML += `<div>[${timestamp}] ${icon} ${message}</div>`;
         debugContent.scrollTop = debugContent.scrollHeight;
         console.log(`[${timestamp}] ${message}`);
       }
 
+      // 🔐 Login logic
       async function login() {
         const email = document.getElementById("email").value.trim();
         const password = document.getElementById("password").value.trim();
@@ -318,30 +315,23 @@
         icon.classList.replace("fa-moon", "fa-sun");
       }
 
-      // 🖼️ Multiple image preview
+      // 🖼️ Preview image before upload
       const offerImage = document.getElementById("offerImage");
-      const imagePreviewContainer = document.getElementById(
-        "imagePreviewContainer"
-      );
+      const imagePreview = document.getElementById("imagePreview");
       offerImage.addEventListener("change", () => {
-        imagePreviewContainer.innerHTML = "";
-        const files = Array.from(offerImage.files);
-        if (files.length > 0) {
-          files.forEach((file) => {
-            const reader = new FileReader();
-            reader.onload = (e) => {
-              const img = document.createElement("img");
-              img.src = e.target.result;
-              img.className = "image-preview";
-              imagePreviewContainer.appendChild(img);
-            };
-            reader.readAsDataURL(file);
-            addDebugLog(
-              `تم اختيار صورة: ${file.name} (${(file.size / 1024).toFixed(
-                2
-              )} KB)`
-            );
-          });
+        const file = offerImage.files[0];
+        if (file) {
+          addDebugLog(
+            `تم اختيار صورة: ${file.name} (${(file.size / 1024).toFixed(2)} KB)`
+          );
+          const reader = new FileReader();
+          reader.onload = (e) => {
+            imagePreview.src = e.target.result;
+            imagePreview.style.display = "block";
+          };
+          reader.readAsDataURL(file);
+        } else {
+          imagePreview.style.display = "none";
         }
       });
 
@@ -351,8 +341,9 @@
         const title = document.getElementById("offerTitle").value.trim();
         const desc = document.getElementById("offerDesc").value.trim();
         const date = document.getElementById("offerDate").value;
-        const files = Array.from(offerImage.files);
+        const file = offerImage.files[0];
 
+        // Clear previous debug logs
         document.getElementById("debugContent").innerHTML = "";
         document.getElementById("debugInfo").style.display = "block";
 
@@ -362,48 +353,74 @@
           return;
         }
 
+        // Disable button during send
         sendBtn.disabled = true;
         sendBtn.innerHTML = 'جاري الإرسال... <span class="spinner"></span>';
 
-        const imageUrls = [];
+        let imageUrl = null;
 
-        if (files.length > 0) {
-          for (const file of files) {
-            try {
-              const uniqueName = `${Date.now()}_${file.name}`;
-              const { data, error } = await supabase.storage
-                .from("offers")
-                .upload(uniqueName, file, {
-                  cacheControl: "3600",
-                  upsert: false,
-                });
+        if (file) {
+          try {
+            addDebugLog(`بدء رفع الصورة: ${file.name}`);
 
-              if (error) throw error;
+            const uniqueName = `${Date.now()}_${file.name}`;
+            const { data, error } = await supabase.storage
+              .from("offers")
+              .upload(uniqueName, file, {
+                cacheControl: "3600",
+                upsert: false,
+              });
 
-              const { data: urlData } = supabase.storage
-                .from("offers")
-                .getPublicUrl(uniqueName);
-              imageUrls.push(urlData.publicUrl);
-              addDebugLog(
-                `✅ تم رفع الصورة بنجاح: ${urlData.publicUrl}`,
-                "success"
-              );
-            } catch (err) {
-              addDebugLog(`خطأ في رفع ${file.name}: ${err.message}`, "error");
+            if (error) {
+              addDebugLog(`خطأ في رفع الصورة: ${error.message}`, "error");
+              throw error;
             }
+
+            const { data: urlData } = supabase.storage
+              .from("offers")
+              .getPublicUrl(uniqueName);
+
+            imageUrl = urlData.publicUrl;
+            addDebugLog(`✅ تم رفع الصورة بنجاح`, "success");
+            addDebugLog(`رابط الصورة: ${imageUrl}`);
+
+            // ⚠️ Test if image URL is accessible
+            try {
+              const testResponse = await fetch(imageUrl, { method: "HEAD" });
+              if (testResponse.ok) {
+                addDebugLog(`✅ الصورة متاحة للوصول العام`, "success");
+              } else {
+                addDebugLog(
+                  `⚠️ الصورة غير متاحة (كود: ${testResponse.status})`,
+                  "error"
+                );
+                addDebugLog(
+                  `تأكد من أن bucket "offers" عام في إعدادات Supabase`,
+                  "error"
+                );
+              }
+            } catch (e) {
+              addDebugLog(`⚠️ لم يتم التحقق من إمكانية الوصول للصورة`, "error");
+            }
+          } catch (err) {
+            console.error("❌ Image upload error:", err);
+            addDebugLog(`خطأ في رفع الصورة: ${err.message}`, "error");
+            alert("⚠️ حدث خطأ أثناء رفع الصورة. سيتم الإرسال بدون صورة.");
+            imageUrl = null;
           }
         } else {
-          addDebugLog("لم يتم اختيار صور - سيتم الإرسال بدون صور");
+          addDebugLog("لم يتم اختيار صورة - سيتم الإرسال بدون صورة");
         }
 
         try {
-          const phone = "962785050875";
+          const phone = "962785050875"; // ✅ Replace with recipient phone number
+
           const payload = {
             name: "Smile Clinic",
             phone: phone,
             service: title,
             appointment: `${desc}\n⏰ صالح حتى: ${date}`,
-            images: imageUrls,
+            image: imageUrl,
           };
 
           addDebugLog("إرسال الطلب إلى WhatsApp API...");
@@ -422,30 +439,47 @@
           addDebugLog(`استجابة API: ${JSON.stringify(data, null, 2)}`);
 
           if (data.success) {
-            alert("✅ تم إرسال العرض بنجاح!");
+            if (data.fallback) {
+              addDebugLog("⚠️ تم الإرسال بنجاح لكن بدون صورة", "error");
+              alert("⚠️ تم إرسال العرض بنجاح (نص فقط - فشل إرسال الصورة)");
+            } else {
+              addDebugLog("✅ تم إرسال العرض بنجاح مع الصورة!", "success");
+              alert("✅ تم إرسال العرض بنجاح!");
+            }
+
+            // Clear form
             document.getElementById("offerTitle").value = "";
             document.getElementById("offerDesc").value = "";
             document.getElementById("offerDate").value = "";
             document.getElementById("offerImage").value = "";
-            imagePreviewContainer.innerHTML = "";
+            imagePreview.style.display = "none";
           } else {
-            alert("⚠️ فشل إرسال العرض.");
+            console.error("❌ Send failed:", data);
+            addDebugLog(`فشل الإرسال: ${JSON.stringify(data)}`, "error");
+            alert(
+              "⚠️ فشل إرسال العرض: " +
+                (data.error?.message || data.message || "خطأ غير معروف")
+            );
           }
         } catch (err) {
+          console.error("❌ Error sending offer:", err);
           addDebugLog(`خطأ في الإرسال: ${err.message}`, "error");
           alert("❌ خطأ أثناء الإرسال: " + err.message);
         } finally {
+          // Re-enable button
           sendBtn.disabled = false;
           sendBtn.innerHTML = "إرسال العرض الآن";
         }
       }
 
-      // 📱 Menu toggle
+      // 📱 Menu toggle for mobile
       const menuToggle = document.getElementById("menuToggle");
       const sidebar = document.getElementById("sidebar");
-      menuToggle?.addEventListener("click", () =>
-        sidebar.classList.toggle("active")
-      );
+      if (menuToggle) {
+        menuToggle.addEventListener("click", () => {
+          sidebar.classList.toggle("active");
+        });
+      }
     </script>
   </body>
 </html>
